--- a/server-app/src/main/resources/scene/MainScene.fxml
+++ b/server-app/src/main/resources/scene/MainScene.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.dep13.control.MainController"
+            fx:controller="lk.ijse.dep13.contoller.MainController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
