--- a/server-app/src/main/resources/scene/MainScene.fxml
+++ b/server-app/src/main/resources/scene/MainScene.fxml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Line?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.dep13.control.MainController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="root" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/MainScene.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.control.MainController">
+   <children>
+      <VBox fx:id="vBoxNavBar" prefHeight="720.0" prefWidth="88.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox id="nav-icon" fx:id="hBoxVideo" alignment="CENTER" layoutX="20.0" layoutY="20.0" prefHeight="67.0" prefWidth="50.0">
+               <children>
+                  <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/video_call_icon.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            <HBox id="nav-icon" fx:id="hBoxChat" alignment="CENTER" layoutX="20.0" layoutY="130.0" prefHeight="69.0" prefWidth="68.0">
+               <children>
+                  <ImageView fitHeight="67.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/chat_icon.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            <HBox id="nav-icon" fx:id="hBoxConnection" alignment="CENTER" layoutX="20.0" layoutY="240.0" prefHeight="66.0" prefWidth="68.0">
+               <children>
+                  <ImageView fitHeight="69.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/connection.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            <HBox id="nav-icon" fx:id="hBoxDeskMe" alignment="CENTER" prefHeight="70.0" prefWidth="68.0">
+               <children>
+                  <ImageView fitHeight="66.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/DeskMe_Icon.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            <HBox id="nav-icon" fx:id="hBoxSettings" alignment="CENTER" layoutX="20.0" layoutY="252.0" prefHeight="70.0" prefWidth="68.0">
+               <children>
+                  <ImageView fitHeight="66.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/settings_icon.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <VBox.margin>
+                  <Insets top="300.0" />
+               </VBox.margin>
+            </HBox>
+         </children></VBox>
+      <Pane fx:id="pnHome" layoutX="88.0" prefHeight="720.0" prefWidth="1196.0">
+         <children>
+            <Label fx:id="lblWelcome" layoutX="23.0" layoutY="25.0" text="Welcome to DeskMe" />
+            <Line endX="1059.0" layoutX="115.0" layoutY="679.0" startX="-100.0" />
+            <Label fx:id="lblConnection" layoutX="34.0" layoutY="688.0" text="Connection status" />
+            <Circle fx:id="crlConnectionStatus" fill="#22eb5b" layoutX="23.0" layoutY="698.0" radius="5.0" stroke="#eeeeee" strokeType="INSIDE" strokeWidth="0.0" />
+            <Button fx:id="btnCreateSession" layoutX="1004.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnCreateSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Create a Session" />
+            <Button fx:id="btnAbortSession" layoutX="820.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnAbortSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Abort the Session" />
+            <Pane fx:id="pnSession" layoutX="53.0" layoutY="79.0" prefHeight="573.0" prefWidth="1096.0">
+               <children>
+                  <ImageView fx:id="imgPreview" fitHeight="582.0" fitWidth="1096.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </Pane>
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
