--- a/server-app/src/main/resources/scene/MainScene.fxml
+++ b/server-app/src/main/resources/scene/MainScene.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -72,12 +73,14 @@
             <Label fx:id="lblConnection" layoutX="34.0" layoutY="688.0" text="Connection status" />
             <Circle fx:id="crlConnectionStatus" fill="#22eb5b" layoutX="23.0" layoutY="698.0" radius="5.0" stroke="#eeeeee" strokeType="INSIDE" strokeWidth="0.0" />
             <Button fx:id="btnCreateSession" layoutX="1004.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnCreateSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Create a Session" />
-            <Button fx:id="btnAbortSession" layoutX="820.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnAbortSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Abort the Session" />
+            <Button fx:id="btnAbortSession" layoutX="823.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnAbortSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Abort the Session" />
             <Pane fx:id="pnSession" layoutX="53.0" layoutY="79.0" prefHeight="573.0" prefWidth="1096.0">
                <children>
                   <ImageView fx:id="imgPreview" fitHeight="582.0" fitWidth="1096.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
+            <TextField layoutX="436.0" layoutY="29.0" prefHeight="27.0" prefWidth="191.0" promptText="Enter Session ID" />
+            <Button fx:id="btnJoinSession" layoutX="643.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnJoinSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Join a Session" />
          </children>
       </Pane>
    </children>
