--- a/server-app/src/main/resources/css/MainScene.css
+++ b/server-app/src/main/resources/css/MainScene.css
@@ -47,5 +47,15 @@
 
 #lblCreateSession{
     -fx-font-family: Montserrat;
-    -fx-font-size: 24px;
+    -fx-font-size: 20px;
+    -fx-text-fill: white;
+}
+
+#hBoxSession{
+    -fx-background-color: linear-gradient(to bottom, #6a6b6a, #3d423d);
+    -fx-background-radius: 15px;
+    -fx-alignment: center;
+    -fx-cursor: hand;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 5, 0, 0, 2);
+    -fx-transition: 0.3s ease-in-out;
 }
