--- a/client-app/src/main/resources/scene/MainScene.fxml
+++ b/client-app/src/main/resources/scene/MainScene.fxml
@@ -19,7 +19,7 @@
          <children>
             <HBox id="nav-icon" fx:id="hBoxVideo" alignment="CENTER" layoutX="20.0" layoutY="20.0" prefHeight="67.0" prefWidth="50.0">
                <children>
-                  <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="47.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../image/video_call_icon.png" />
                      </image>
@@ -28,16 +28,25 @@
             </HBox>
             <HBox id="nav-icon" fx:id="hBoxChat" alignment="CENTER" layoutX="20.0" layoutY="130.0" prefHeight="69.0" prefWidth="68.0">
                <children>
-                  <ImageView fitHeight="67.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="45.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../image/chat_icon.png" />
+                        <Image url="@../image/chat_icon_2.png" />
                      </image>
                   </ImageView>
                </children>
             </HBox>
             <HBox id="nav-icon" fx:id="hBoxConnection" alignment="CENTER" layoutX="20.0" layoutY="240.0" prefHeight="66.0" prefWidth="68.0">
                <children>
-                  <ImageView fitHeight="69.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="49.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/file_icon.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            <HBox id="nav-icon" fx:id="hBoxDeskMe1" alignment="CENTER" layoutX="20.0" layoutY="252.0" prefHeight="70.0" prefWidth="68.0">
+               <children>
+                  <ImageView fitHeight="46.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../image/connection.png" />
                      </image>
@@ -46,7 +55,7 @@
             </HBox>
             <HBox id="nav-icon" fx:id="hBoxDeskMe" alignment="CENTER" prefHeight="70.0" prefWidth="68.0">
                <children>
-                  <ImageView fitHeight="66.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="51.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../image/DeskMe_Icon.png" />
                      </image>
@@ -55,32 +64,31 @@
             </HBox>
             <HBox id="nav-icon" fx:id="hBoxSettings" alignment="CENTER" layoutX="20.0" layoutY="252.0" prefHeight="70.0" prefWidth="68.0">
                <children>
-                  <ImageView fitHeight="66.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="48.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../image/settings_icon.png" />
                      </image>
                   </ImageView>
                </children>
                <VBox.margin>
-                  <Insets top="300.0" />
+                  <Insets />
                </VBox.margin>
             </HBox>
          </children></VBox>
       <Pane fx:id="pnHome" layoutX="88.0" prefHeight="720.0" prefWidth="1196.0">
          <children>
-            <Label fx:id="lblWelcome" layoutX="23.0" layoutY="25.0" text="Welcome to DeskMe" />
+            <Label fx:id="lblWelcome" layoutX="45.0" layoutY="25.0" text="Welcome to DeskMe" />
             <Line endX="1059.0" layoutX="115.0" layoutY="679.0" startX="-100.0" />
             <Label fx:id="lblConnection" layoutX="34.0" layoutY="688.0" text="Connection status" />
             <Circle fx:id="crlConnectionStatus" fill="#22eb5b" layoutX="23.0" layoutY="698.0" radius="5.0" stroke="#eeeeee" strokeType="INSIDE" strokeWidth="0.0" />
-            <Button fx:id="btnCreateSession" layoutX="1004.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnCreateSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Create a Session" />
-            <Button fx:id="btnAbortSession" layoutX="823.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnAbortSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Abort the Session" />
+            <Button fx:id="btnAbortSession" layoutX="974.0" layoutY="22.0" mnemonicParsing="false" onAction="#btnAbortSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Abort the Session" />
             <Pane fx:id="pnSession" layoutX="45.0" layoutY="85.0" prefHeight="583.0" prefWidth="1100.0">
                <children>
                   <ImageView fx:id="imgPreview" fitHeight="583.0" fitWidth="1100.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
-            <TextField layoutX="436.0" layoutY="29.0" prefHeight="27.0" prefWidth="191.0" promptText="Enter Session ID" />
-            <Button fx:id="btnJoinSession" layoutX="643.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnJoinSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Join a Session" />
+            <TextField layoutX="587.0" layoutY="37.0" prefHeight="27.0" prefWidth="191.0" promptText="Enter Session ID" />
+            <Button fx:id="btnJoinSession" layoutX="794.0" layoutY="22.0" mnemonicParsing="false" onAction="#btnJoinSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Join a Session" />
          </children>
       </Pane>
    </children>
