--- a/server-app/src/main/resources/scene/MainScene.fxml
+++ b/server-app/src/main/resources/scene/MainScene.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane fx:id="root" prefHeight="576.0" prefWidth="720.0" stylesheets="@../css/MainScene.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.controller.ServerMainController">
    <children>
-      <VBox fx:id="vBoxNavBar" prefHeight="576.0" prefWidth="95.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="vBoxNavBar" alignment="TOP_CENTER" prefHeight="576.0" prefWidth="95.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox id="nav-icon" alignment="CENTER" prefHeight="65.0" prefWidth="60.0">
                <children>
@@ -68,12 +68,12 @@
       <Label fx:id="lblWelcome" layoutX="120.0" layoutY="22.0" text="Welcome to DeskMe" />
       <HBox fx:id="hBoxSession" alignment="CENTER" layoutX="136.0" layoutY="126.0" prefHeight="66.0" prefWidth="557.0" AnchorPane.rightAnchor="25.0">
          <children>
-            <Button fx:id="btnCreateSession" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCreateSessionOnAction" prefHeight="56.0" prefWidth="60.0">
+            <Button fx:id="btnCreateSession" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCreateSessionOnAction" prefHeight="40.0" prefWidth="40.0">
                <HBox.margin>
                   <Insets right="20.0" />
                </HBox.margin>
                <graphic>
-                  <ImageView fitHeight="57.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../image/add_icon.png" />
                      </image>
