--- a/server-app/src/main/resources/scene/TextScreen.fxml
+++ b/server-app/src/main/resources/scene/TextScreen.fxml
@@ -4,10 +4,10 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="645.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.contoller.TextScreenServerController">
+<AnchorPane prefHeight="400.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.contoller.TextScreenServerController">
    <children>
       <TextArea fx:id="txtScreen" layoutX="47.0" layoutY="279.0" onKeyPressed="#keyPressed" onMouseClicked="#txtScreenOnMouseCLicked" prefHeight="37.0" prefWidth="491.0" />
       <TextArea fx:id="txtAreaHistory" layoutX="47.0" layoutY="65.0" prefHeight="200.0" prefWidth="491.0" />
-      <Button fx:id="btnRestartServer" layoutX="545.0" layoutY="88.0" mnemonicParsing="false" onAction="#btnReStartServerOnAction" prefHeight="26.0" prefWidth="118.0" text="restart server" />
+      <Button fx:id="btnEstablishConnection" layoutX="545.0" layoutY="88.0" mnemonicParsing="false" onAction="#btnReStartServerOnAction" prefHeight="26.0" prefWidth="153.0" text="establish connection" />
    </children>
 </AnchorPane>
