--- a/client-app/src/main/resources/scene/MainScene.fxml
+++ b/client-app/src/main/resources/scene/MainScene.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane fx:id="root" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/MainScene.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.controller.ClientMainController">
+<AnchorPane fx:id="root" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../clientAppCSS/MainScene.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.controller.ClientMainController">
    <children>
       <VBox fx:id="vBoxNavBar" prefHeight="720.0" prefWidth="88.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox id="nav-icon" fx:id="hBoxVideo" alignment="CENTER" layoutX="20.0" layoutY="20.0" prefHeight="67.0" prefWidth="50.0">
+            <HBox id="nav-icon" fx:id="hBoxVideo" alignment="CENTER" layoutX="20.0" layoutY="20.0" onMouseClicked="#hBoxVideoOnMouseClicked" prefHeight="67.0" prefWidth="50.0">
                <children>
                   <ImageView fitHeight="47.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -35,7 +35,7 @@
                   </ImageView>
                </children>
             </HBox>
-            <HBox id="nav-icon" fx:id="hBoxConnection" alignment="CENTER" layoutX="20.0" layoutY="240.0" prefHeight="66.0" prefWidth="68.0">
+            <HBox id="nav-icon" fx:id="hBoxFileSender" alignment="CENTER" layoutX="20.0" layoutY="240.0" onMouseClicked="#hBoxFileSenderOnMouseClicked" prefHeight="66.0" prefWidth="68.0">
                <children>
                   <ImageView fitHeight="49.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -44,7 +44,7 @@
                   </ImageView>
                </children>
             </HBox>
-            <HBox id="nav-icon" fx:id="hBoxDeskMe1" alignment="CENTER" layoutX="20.0" layoutY="252.0" prefHeight="70.0" prefWidth="68.0">
+            <HBox id="nav-icon" fx:id="hBoxConnection" alignment="CENTER" layoutX="20.0" layoutY="252.0" prefHeight="70.0" prefWidth="68.0">
                <children>
                   <ImageView fitHeight="46.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
