--- a/client-app/src/main/resources/scene/MainScene.fxml
+++ b/client-app/src/main/resources/scene/MainScene.fxml
@@ -85,6 +85,7 @@
             <Pane fx:id="pnSession" layoutX="45.0" layoutY="85.0" prefHeight="583.0" prefWidth="1100.0">
                <children>
                   <ImageView fx:id="imgPreview" fitHeight="583.0" fitWidth="1100.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgVideo" fitHeight="150.0" fitWidth="200.0" layoutX="277.0" layoutY="-75.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
             <TextField layoutX="587.0" layoutY="37.0" prefHeight="27.0" prefWidth="191.0" promptText="Enter Session ID" />
