--- a/client-app/src/main/resources/scene/MainScene.fxml
+++ b/client-app/src/main/resources/scene/MainScene.fxml
@@ -75,22 +75,26 @@
                </VBox.margin>
             </HBox>
          </children></VBox>
-      <Pane fx:id="pnHome" layoutX="88.0" prefHeight="720.0" prefWidth="1196.0">
+      <AnchorPane layoutX="84.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="84.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="lblWelcome" layoutX="45.0" layoutY="25.0" text="Welcome to DeskMe" />
-            <Line endX="1059.0" layoutX="115.0" layoutY="679.0" startX="-100.0" />
-            <Label fx:id="lblConnection" layoutX="34.0" layoutY="688.0" text="Connection status" />
-            <Circle fx:id="crlConnectionStatus" fill="#22eb5b" layoutX="23.0" layoutY="698.0" radius="5.0" stroke="#eeeeee" strokeType="INSIDE" strokeWidth="0.0" />
-            <Button fx:id="btnAbortSession" layoutX="974.0" layoutY="22.0" mnemonicParsing="false" onAction="#btnAbortSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Abort the Session" />
-            <Pane fx:id="pnSession" layoutX="45.0" layoutY="85.0" prefHeight="583.0" prefWidth="1100.0">
+            <Line endX="1059.0" layoutX="115.0" layoutY="679.0" startX="-100.0" AnchorPane.bottomAnchor="40.5" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="21.5" />
+            <Label fx:id="lblConnection" layoutX="34.0" layoutY="688.0" text="Connection status" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="34.0" AnchorPane.rightAnchor="1042.0" />
+            <Circle fx:id="crlConnectionStatus" fill="#22eb5b" layoutX="23.0" layoutY="698.0" radius="5.0" stroke="#eeeeee" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.bottomAnchor="17.0" />
+            <Pane fx:id="pnSession" layoutX="18.0" layoutY="92.0" prefHeight="583.0" prefWidth="1160.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="92.0">
                <children>
                   <ImageView fx:id="imgPreview" fitHeight="583.0" fitWidth="1100.0" pickOnBounds="true" preserveRatio="true" />
                   <ImageView fx:id="imgVideo" fitHeight="150.0" fitWidth="200.0" layoutX="277.0" layoutY="-75.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
-            <TextField layoutX="587.0" layoutY="37.0" prefHeight="27.0" prefWidth="191.0" promptText="Enter Session ID" />
-            <Button fx:id="btnJoinSession" layoutX="794.0" layoutY="22.0" mnemonicParsing="false" onAction="#btnJoinSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Join a Session" />
+            <HBox alignment="CENTER" layoutX="598.0" layoutY="14.0" spacing="20.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="14.0">
+               <children>
+                  <TextField alignment="CENTER" prefHeight="27.0" prefWidth="191.0" promptText="Enter Session ID" />
+                  <Button fx:id="btnJoinSession" mnemonicParsing="false" onAction="#btnJoinSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Join a Session" />
+                  <Button fx:id="btnAbortSession" mnemonicParsing="false" onAction="#btnAbortSessionOnAction" prefHeight="41.0" prefWidth="171.0" text="Abort the Session" />
+               </children>
+            </HBox>
          </children>
-      </Pane>
+      </AnchorPane>
    </children>
 </AnchorPane>
