--- a/server-app/src/main/resources/scene/MainScene.fxml
+++ b/server-app/src/main/resources/scene/MainScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane fx:id="root" prefHeight="576.0" prefWidth="720.0" stylesheets="@../sharedAppCSS/MainScene.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.controller.ServerMainController">
+<AnchorPane fx:id="root" prefHeight="576.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.controller.ServerMainController">
    <children>
       <VBox fx:id="vBoxNavBar" alignment="TOP_CENTER" prefHeight="576.0" prefWidth="95.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -28,7 +29,7 @@
                <children>
                   <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../image/chat_icon.png" />
+                        <Image url="@../image/chat_icon_2.png" />
                      </image>
                   </ImageView>
                </children>
@@ -88,4 +89,8 @@
          </children>
       </HBox>
    </children>
+   <stylesheets>
+      <URL value="@../sharedAppCSS/MainScene.css" />
+      <URL value="@../css/MainScene.css" />
+   </stylesheets>
 </AnchorPane>
