--- a/server-app/src/main/resources/scene/MainScene.fxml
+++ b/server-app/src/main/resources/scene/MainScene.fxml
@@ -26,7 +26,7 @@
                   </ImageView>
                </children>
             </HBox>
-            <HBox id="nav-icon" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="65.0" prefWidth="60.0">
+            <HBox id="nav-icon" fx:id="hBoxChat" alignment="CENTER" layoutX="10.0" layoutY="10.0" onMouseClicked="#hBoxChatOnMouseClicked" prefHeight="65.0" prefWidth="60.0">
                <children>
                   <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
