--- a/server-app/src/main/resources/scene/MainScene.fxml
+++ b/server-app/src/main/resources/scene/MainScene.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -90,6 +91,7 @@
          </children>
       </HBox>
       <Button fx:id="btnEndSession" layoutX="579.0" layoutY="484.0" mnemonicParsing="false" onAction="#btnEndSessionOnAction" text="End Session" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="22.0" />
+      <TextArea fx:id="txtAreaForTesting" layoutX="175.0" layoutY="261.0" prefHeight="200.0" prefWidth="415.0" />
    </children>
    <stylesheets>
       <URL value="@../css/MainScene.css" />
