--- a/shared-app/src/main/resources/sharedScene/FileSender.fxml
+++ b/shared-app/src/main/resources/sharedScene/FileSender.fxml
@@ -13,5 +13,6 @@
       <Label fx:id="lblH1" layoutX="269.0" layoutY="14.0" text="File Sender" />
       <Button fx:id="btnBrowse" layoutX="528.0" layoutY="75.0" mnemonicParsing="false" onAction="#btnBrowseOnAction" prefHeight="39.0" prefWidth="117.0" text="Browse" />
       <Button fx:id="btnRecieve" layoutX="163.0" layoutY="126.0" mnemonicParsing="false" onAction="#btnRecieveOnAction" prefHeight="39.0" prefWidth="117.0" text="recieve" />
+      <TextField fx:id="txtSavedLocation" layoutX="296.0" layoutY="133.0" prefHeight="26.0" prefWidth="354.0" promptText="download location" />
    </children>
 </AnchorPane>
