--- a/client-app/src/main/resources/scene/MainScene.fxml
+++ b/client-app/src/main/resources/scene/MainScene.fxml
@@ -66,7 +66,7 @@
          <children>
             <Label fx:id="lblWelcome" layoutX="45.0" layoutY="25.0" text="Welcome to DeskMe" />
             <Line endX="1059.0" layoutX="115.0" layoutY="679.0" startX="-100.0" AnchorPane.bottomAnchor="40.5" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="21.5" />
-            <Label fx:id="lblConnection" layoutX="34.0" layoutY="688.0" text="Connection status" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="34.0" AnchorPane.rightAnchor="1042.0" />
+            <Label fx:id="lblConnection" layoutX="34.0" layoutY="688.0" prefHeight="19.0" prefWidth="715.0" text="Connection status" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="34.0" AnchorPane.rightAnchor="447.0" />
             <Circle fx:id="crlConnectionStatus" fill="#22eb5b" layoutX="23.0" layoutY="698.0" radius="5.0" stroke="#eeeeee" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.bottomAnchor="17.0" />
             <Pane fx:id="pnSession" layoutX="18.0" layoutY="92.0" prefHeight="583.0" prefWidth="1160.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="92.0">
                <children>
