Fix some naming convention and varibale names

--- a/shared-app/src/main/resources/sharedCss/FileSender.css
+++ b/shared-app/src/main/resources/sharedCss/FileSender.css
@@ -11,7 +11,14 @@
     -fx-transition: 0.3s ease-in-out;
 }
 
-#btnRecieve{
+#btnSend:hover{
+    -fx-background-color: linear-gradient(to bottom, #5692f6, #2a73f3);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 8, 0, 0, 3);
+    -fx-scale-x: 1.05;
+    -fx-scale-y: 1.05;
+}
+
+#btnReceive{
     -fx-background-color: linear-gradient(to bottom, #05ea07, #049306);
     -fx-background-radius: 20px;
     -fx-text-fill: white;
@@ -19,20 +26,13 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 5, 0, 0, 2);
     -fx-transition: 0.3s ease-in-out;
 }
-#btnSend:hover{
-    -fx-background-color: linear-gradient(to bottom, #4c8af4, #226bea);
+
+#btnReceive:hover{
+    -fx-background-color: linear-gradient(to bottom, #14e416, #0ea910);
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 8, 0, 0, 3);
     -fx-scale-x: 1.05;
     -fx-scale-y: 1.05;
 }
-
-#btnRecieve:hover{
-    -fx-background-color: linear-gradient(to bottom, #4c8af4, #226bea);
-    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 8, 0, 0, 3);
-    -fx-scale-x: 1.05;
-    -fx-scale-y: 1.05;
-}
-
 
 #btnBrowse{
     -fx-background-color: linear-gradient(to bottom, #f17f2d, #ea5e22);
@@ -43,7 +43,7 @@
     -fx-transition: 0.3s ease-in-out;
 }
 #btnBrowse:hover{
-    -fx-background-color: linear-gradient(to bottom, #f17f2d, #ea5e22);
+    -fx-background-color: linear-gradient(to bottom, #f48836, #f16c32);
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 5, 0, 0, 2);
     -fx-scale-x: 1.05;
     -fx-scale-y: 1.05;
