--- a/shared-app/src/main/resources/sharedScene/Message.fxml
+++ b/shared-app/src/main/resources/sharedScene/Message.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane fx:id="root" prefHeight="371.0" prefWidth="600.0" stylesheets="@../sharedCss/Message.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.sharedApp.controller.MessageController">
    <children>
-      <TextArea fx:id="txtAreaChat" layoutX="14.0" layoutY="52.0" prefHeight="240.0" prefWidth="573.0" />
+      <TextArea fx:id="txtAreaChat" editable="false" layoutX="14.0" layoutY="52.0" prefHeight="240.0" prefWidth="573.0" />
       <Button fx:id="btnSend" layoutX="495.0" layoutY="305.0" mnemonicParsing="false" onAction="#btnSend" prefHeight="35.0" prefWidth="91.0" text="Send" />
       <TextField fx:id="txtInput" layoutX="14.0" layoutY="305.0" prefHeight="35.0" prefWidth="464.0" />
       <Label fx:id="lblH1" layoutX="231.0" layoutY="14.0" text="Conversation" />
